Fixed display issue with editing tree rows.  Not sure it's 100% robust, but it seems to work well enough for now--except for calculating the non-wrapping height of the editor if the cell is taller than the cell data & it's display:block

--- a/css/archistryui.css
+++ b/css/archistryui.css
@@ -80,7 +80,13 @@
 	vertical-align: middle !important;
 }
 
-.aui-grid-cell-data
+.aui-grid-cell-meta
+{
+}
+
+td.ui-icon-left .aui-grid-cell-data
 {
 	display: block;
+	/* border: 1px solid green; */
+	min-width: 5em;
 }
